# ray-tracing

./: .gitignore  Cargo.toml  README.md  profile.sh
benches/: basic.rs
examples/: book1.rs  book1_1.rs  book2.rs  detailed.rs  simple1.rs  simple2.rs
src/: camera.rs  colour.rs  hittable.rs  interval.rs  lib.rs  main.rs  material.rs  random.rs  ray.rs  sphere.rs  util.rs
src/hittable/: hit_record.rs  hittable_list.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
