[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.29.2"
rand = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "basic"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true
